--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,42 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- 字体的大小 -->
+    <dimen name="font_larger" >22sp</dimen>
+    <dimen name="font_large" >18sp</dimen>
+    <dimen name="font_normal">15sp</dimen>
+    <dimen name="font_small">12sp</dimen>
+
+    <!-- 控件间隔大小-->
+
+    <!-- button 的高度-->
+    <dimen name="button_height_tall">60dp</dimen>
+    <dimen name="button_height_normal">40dp</dimen>
+    <dimen name="button_height_short">32dp</dimen>
+
+    <!-- view-->
+    <dimen name="view_height_tall">50dp</dimen>
+    <dimen name="view_height_normal">48dp</dimen>
+    <dimen name="view_height_short">40dp</dimen>
+
+    <!-- iamgeview size -->
+    <dimen name="img_height_tall">90dp</dimen>
+    <dimen name="img_height_normal">80dp</dimen>
+    <dimen name="img_height_short">60dp</dimen>
+
+    <!-- icon -->
+    <dimen name="icon_height_tall">24dp</dimen>
+    <dimen name="icon_height_normal">18dp</dimen>
+    <dimen name="icon_height_small">14dp</dimen>
+
+    <!-- 内填充-->
+    <dimen name="padding_large">6dp</dimen>
+    <dimen name="padding_normal">4dp</dimen>
+    <dimen name="padding_small">2dp</dimen>
+
+    <!-- 外边距 -->
+    <dimen name="margin_large">10dp</dimen>
+    <dimen name="margin_normal">6dp</dimen>
+    <dimen name="margin_small">4dp</dimen>
+
 </resources>
