--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="ContentText">
+        <item name="android:textSize">@dimen/font_larger</item>
+        <item name="android:textColor">@color/white</item>
     </style>
+
+
+    <style name="ItemText">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ItemLeftList" parent="ItemText">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:padding">@dimen/padding_normal</item>
+    </style>
+
+    <style name="headView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+
+
+    <style name="ProgressBar_Circle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:indeterminateDrawable">@drawable/shape_ring</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">@color/white</item>
+
+    </style>
+
+
+
 
 </resources>
